# os-autoinst-scripts

./: .setup.mk  Makefile  _common  check-netbox-machine-state.py  check-netbox-unused-machine-power.py  dependencies.yaml  openqa-bats-review  openqa-list-incidents  openqa-powermanagement.py  openqa-trigger-bisect-jobs  os-autoinst-obs-auto-submit  pyproject.toml  trigger-openqa_in_openqa
.github/workflows/: backlog.yml  ci.yml  obs-list-dependencies.yml  schedule.yml
.obs/: workflows.yml
racktables/: __init__.py  get_unused_machines.py  racktables.py
tests/: test_openqa-bats-review.py  test_openqa_bats_review.py  test_trigger_bisect_jobs.py
